configurations tests in frontend

--- a/front-api/app/index.html
+++ b/front-api/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html ng-app="app" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">    
@@ -8,7 +8,7 @@
     <title>Restaurant App</title>
 
     <!-- Bootstrap -->
-    <!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="/scripts/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,13 +16,17 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src="/scripts/angular/angular.js"></script>
+    <script src="/scripts/angular-route/angular-route.js"></script>
+    <script src="/scripts/oclazyload/dist/oclazyload.js"></script>
+    <script src="/scripts/angular-translate/dist/angular-translate.js"></script>
+    <script src="/app/app.js" charset="utf-8"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="/scripts/bootstrap/dist/js/bootstrap.js"></script>
   </head>
   <body>
-    <h1>Hello, world! Joel</h1>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <!--<script src="js/bootstrap.min.js"></script>-->
+    <div class="container">
+      <div ng-view></div>
+    </div>  
   </body>
 </html>
