--- a/front-api/app/index.html
+++ b/front-api/app/index.html
@@ -9,6 +9,7 @@
 
     <!-- Bootstrap -->
     <link href="/scripts/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/resources/css/style-restaurant.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -26,7 +27,20 @@
   </head>
   <body>
     <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" id="userName" class="active">{{userName}}</li>
+          </ul>
+        </nav>
+        <h3 class="text-muted" translate='PROJECT' translate-compile></h3>
+      </div>
       <div ng-view></div>
+
+      <footer class="footer">
+        <p translate="COPY" translate-compile></p>
+      </footer>
+
     </div>  
   </body>
 </html>
