--- a/front-api/app/index.html
+++ b/front-api/app/index.html
@@ -31,6 +31,7 @@
         <nav>
           <ul class="nav nav-pills pull-right">
             <li role="presentation" id="userName" class="active">{{userName}}</li>
+             <li role="presentation" class="active"><a href="#">new user</a></li>
           </ul>
         </nav>
         <h3 class="text-muted" translate='PROJECT' translate-compile></h3>
